tests/negative/test_type_annot_known_bad.orb
fnc main() () {
    + 9999:i8;
};